# dit

./: config.yaml  pyproject.toml  run.sh  train.py
src/: hf_save.py  move.py  resume.py  train.py  upload.py  zip.py
src/data_module/: dataset.py
src/nets/: DiT.py  dit.code-workspace  ditBlock.py  finalLayer.py  mlp.py
src/nets/attentionLayers/: crossAttentionHead.py  multiHeadAttention.py  selfAttentionHead.py
src/nets/embeddingLayers/: embeddingProjector.py  imageEmbed.py  textEmbed.py  timestepEmbed.py
