[project]
name = "dit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "diffusers>=0.37.1",
    "huggingface-hub>=1.12.2",
    "lightning>=2.6.1",
    "timm>=1.0.26",
    "torch>=2.11.0",
]
