[project]
name = "dit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.20.0",
    "bitsandbytes>=0.43.2",
    "datasets>=4.8.5",
    "diffusers>=0.37.1",
    "ema-pytorch>=0.7.9",
    "huggingface-hub>=1.12.2",
    "pillow>=12.2.0",
    "pytorch-lightning==2.5.1",  # <-- older, stable version
    "pyyaml>=6.0.3",
    "timm>=1.0.26",
    "transformers>=4.40.0",
    "wandb",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

# Temporarily remove or comment this out to rule out environment-marker bugs
# [tool.uv]
# environments = ["sys_platform == 'linux'"]